Barre De Navigation tout est aligner correctement et la box shadow est mise

--- a/css/style2.css
+++ b/css/style2.css
@@ -13,7 +13,8 @@ body{
 
 nav {
     background-color: black;
-    display: block;    
+    display: block;
+    box-shadow: 0em 0.5em 1.5em black;    
 }
 nav ul li{
     display: inline-block;
@@ -34,5 +35,9 @@ nav ul li a {
     padding-left: 20px;
 }
 nav ul {
+    padding-left: 0px;
+}
+
+.warzone a  {
     padding-left: 0px;
 }
